force-app/force-app/force-app/main/default/objects/Customers_Planned__c/Customers_Planned__c.object-meta.xml
<CustomObject>
    <label>Customers Planned</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Planned Customers Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers Planned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>