force-app/force-app/force-app/main/default/objects/Customers_Planned__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adilabad</fullName>
            </value>
            <value>
                <fullName>Anantapur</fullName>
            </value>
            <value>
                <fullName>Chittoor</fullName>
            </value>
            <value>
                <fullName>East Godavari</fullName>
            </value>
            <value>
                <fullName>Alluri Sitarama Raju</fullName>
            </value>
            <value>
                <fullName>Anakapalli</fullName>
            </value>
            <value>
                <fullName>Annamaya</fullName>
            </value>
            <value>
                <fullName>Bapatla</fullName>
            </value>
            <value>
                <fullName>Eluru</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Kadapa</fullName>
            </value>
            <value>
                <fullName>Kakinada</fullName>
            </value>
            <value>
                <fullName>Konaseema</fullName>
            </value>
            <value>
                <fullName>Krishna</fullName>
            </value>
            <value>
                <fullName>Kurnool</fullName>
            </value>
            <value>
                <fullName>Manyam</fullName>
            </value>
            <value>
                <fullName>N T Rama Rao</fullName>
            </value>
            <value>
                <fullName>Nandyal</fullName>
            </value>
            <value>
                <fullName>Nellore</fullName>
            </value>
            <value>
                <fullName>Palnadu</fullName>
            </value>
            <value>
                <fullName>Prakasam</fullName>
            </value>
            <value>
                <fullName>Sri Balaji</fullName>
            </value>
            <value>
                <fullName>Sri Satya Sai</fullName>
            </value>
            <value>
                <fullName>Srikakulam</fullName>
            </value>
            <value>
                <fullName>Visakhapatnam</fullName>
            </value>
            <value>
                <fullName>Vizianagaram</fullName>
            </value>
            <value>
                <fullName>West Godavari</fullName>
            </value>
            <value>
                <fullName>Baksa</fullName>
            </value>
            <value>
                <fullName>Barpeta</fullName>
            </value>
            <value>
                <fullName>Bongaigaon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>