force-app/force-app/force-app/main/default/objects/Customers_Planned__c/fields/Tour_Plan__c.field-meta.xml
<CustomField>
    <fullName>Tour_Plan__c</fullName>
    <label>Tour Plan</label>
    <referenceTo>Tour_Plan__c</referenceTo>
    <relationshipLabel>Customers Planned</relationshipLabel>
    <relationshipName>Customers_Planned</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>